<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gm180.spare.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_chatting"
        android:name="com.gm180.spare.ui.fragment.ChattingFragment"
        android:label="@string/title_chatting"
        tools:layout="@layout/chatting_fragment" />

    <fragment
        android:id="@+id/navigation_board"
        android:name="com.gm180.spare.ui.fragment.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/board_fragment" />

    <fragment
        android:id="@+id/navigation_average"
        android:name="com.gm180.spare.ui.fragment.AvgFragment"
        android:label="@string/title_avg"
        tools:layout="@layout/avg_fragment" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.gm180.spare.ui.fragment.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/setting_fragment" />


</navigation>